optimize android xml generator update pom repository